# cIntelligence_22

./: README.md  pyproject.toml
Lab1/: README.md
exercises/: ex1.py
lab1/: Lab1.ipynb
lab2/: README.md  set_covering2.py
lab3/: README.md  policySearch.py  solution.ipynb  solution.py  test.py
labs/: README.md  lab1.ipynb  labTest.ipynb
lectures/: Lab_feedback.md  Lecture1.md  Lecture2.md  gameTheory.md
