[tool.poetry]
name = "cintelligence-22"
version = "0.1.0"
description = ""
authors = ["erikbengtsson <eribeng@student.chalmers.se>"]
readme = "README.md"
packages = [{include = "cintelligence_22"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
